# oc-1-project-74

./: README.md  prediction_notebook.ipynb
training/: .gitignore  maskrcnn_custom_config.py  prepare_dataset.py  pyproject.toml  train.py
