[project]
name = "oc1-plants"
version = "0.1.0"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy<2",
    "setuptools<70", # >=70 drops pkg_resources which detectron2 needs
    "opencv-python-headless",
    "pycocotools",
    "pillow",
    "detectron2",
    "ipykernel>=7.2.0",
    "imageio>=2.37.3",
    "pandas>=2.3.3",
    "laptrack>=0.17.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torchvision = { index = "pytorch-cu124" }
detectron2 = { git = "https://github.com/facebookresearch/detectron2.git" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Install order matters for detectron2 (needs torch at build time):
#   uv venv .venv --python 3.10
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu124
#   uv pip install "setuptools<70" numpy==1.24.4 pycocotools opencv-python-headless pillow
#   uv pip install git+https://github.com/facebookresearch/detectron2.git --no-build-isolation
